fixed row spacing

--- a/website/static/css/style.scss
+++ b/website/static/css/style.scss
@@ -30,3 +30,6 @@
         max-height: 275px;;
     }
 }
+.mp-row {
+    padding-bottom: 10px;
+}
